# LLVM360

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LLVM360.sln  README.md  TODO.md  compile.bat
LLVM360/: AES.cpp  AES.h  IRGenerator.cpp  IRGenerator.h  Instruction.h  InstructionDecoder.cpp  InstructionDecoder.h  InstructionEmitter.h  LLVM360.cpp  LLVM360.vcxproj  LLVM360.vcxproj.filters  Utils.cpp  Utils.h  XEXImage.h  XenonState.h  XexLoader.cpp  XexLoader.h  rijndael-alg-fst.c  rijndael-alg-fst.h
LLVMRecomp/: CMakeLists.txt
LLVMRecomp/cmake/: FindClang-Wrapper.cmake
LLVMRecomp/toolchain/: README.md
LLVMRecomp/toolchain/cmake/: HunterPackages.cmake
llvm360/Emulator/: CMakeLists.txt
llvm360/Emulator/src/: Shared.h  emulator.cpp
llvm360/Emulator/src/Graphics/: ImGuiDebugger.cpp  ImGuiTest.h
llvm360/Emulator/src/Runtime/: Runtime.h
llvm360/Emulator/src/Runtime/Kernel/: XKernel.cpp  XKernel.h
llvm360/Emulator/src/Runtime/Xen/: Xam_Entry.h  Xam_Impl.h  XboxKrnl_Entry.h  XboxKrnl_Impl.h
llvm360/LLVMApp/: CMakeLists.txt
llvm360/LLVMApp/src/: LLVM360.cpp  Util.h
llvm360/LLVMApp/src/Decoder/: InstructionDecoder.cpp  InstructionDecoder.h
llvm360/LLVMApp/src/IR/: IRFunc.cpp  IRFunc.h  IRGenerator.cpp  IRGenerator.h  InstructionEmitter.h  JumpTables.h
llvm360/LLVMApp/src/IR/Unit/: UnitTesting.h
llvm360/LLVMApp/src/Xex/: XexLoader.h
llvm360/LLVMApp/src/misc/: Utils.cpp
llvm360/Naive+/: CMakeLists.txt
llvm360/Naive+/src/: LLVM360.cpp  Logger.h  Shared.h  Util.h
llvm360/Naive+/src/Decoder/: InstructionDecoder.cpp  InstructionDecoder.cpp.oldref  InstructionDecoder.h  InstructionRegistry.cpp  InstructionRegistry.h
llvm360/Naive+/src/IR/: IRFunc.cpp  IRFunc.h  IRGenerator.cpp  IRGenerator.h  InstructionEmitter.h
llvm360/Naive+/src/IR/Unit/: UnitTesting.h
llvm360/Naive+/src/Loader/: ImageLoader.cpp  ImageLoader.h  PEImage.h  XEXImage.h
llvm360/Naive+/src/Loader/table/: ImportTable.h
llvm360/Naive+/src/Naive+/: Naive+.h
llvm360/Naive+/src/Xex/: ImportTable.h  XexLoader.cpp
llvm360/Runtime/: CMakeLists.txt
llvm360/Runtime/src/: Runtime.h  dllmain.cpp  kernelImpl.h  pch.h
llvm360/Runtime/src/Graphics/: DX12Manager.cpp  DX12Manager.h  ImGuiDebugger.h
llvm360/Runtime/src/Runtime/: MemoryManager.h  Runtime.cpp  Runtime.h  kernelImpl.h
llvm360/Runtime/src/Runtime/Kernel/: XModule.cpp  XeThread.cpp  XeThread.h
llvm360/Runtime/src/Runtime/Xen/: XboxKrnl_Entry.h  XboxKrnl_Impl.h  XenUtils.h
runtime/Runtime/: Runtime.sln
runtime/Runtime/Runtime/: Runtime.cpp  Runtime.h  Runtime.vcxproj  Runtime.vcxproj.filters  dllmain.cpp  kernelImpl.h  pch.cpp  pch.h
src/: LLVM360.cpp  Util.h
src/Decoder/: InstructionDecoder.cpp
src/IR/: IRFunc.cpp  IRFunc.h  IRGenerator.cpp  IRGenerator.h  InstructionEmitter.h  XenonState.h
src/IR/Unit/: UnitTesting.h
src/Xex/: ImportTable.h  XexLoader.cpp  XexLoader.h
x64/Debug/: MinecraftX360.xex
